fix scrolling on mobile and add more styles

--- a/app/css/main.styl
+++ b/app/css/main.styl
@@ -120,10 +120,21 @@ nav ul > li:not(:last-child):after
 nav li
 	display inline-block
 	margin-right 0.5em
+	font-size 0.9em
 	
 nav .logo
 	width 10em
 	height 3.31em
+	position absolute
+
+nav .contacts
+	position absolute
+	right 1em
+	font-size 1.5em
+	line-height 0.7
+
+nav .photos:after
+	display none
 
 a
 	color #214560
